--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,12 @@
 <h1>Lists#show</h1>
 <p>Find me in app/views/lists/show.html.erb</p>
+
+
+<h1><%= @board.name %> - <%= @list.name %></h1>
+<h2>Tasks</h2>
+
+<% @list.task.each do |task| %>
+  <%= render 'tasks/task', { task: task} %>
+<% end %>
+
+
