--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Tasks#new</h1>
-<p>Find me in app/views/tasks/new.html.erb</p>
+<h1>Add a Task</h1>
+<%= form_for [@list, @task] do |i| %>
+  <%= i.label :name %>
+  <%= i.text_area :name, required: true %>
+  <%= i.submit %>
