--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Boards#index</h1>
-<p>Find me in app/views/boards/index.html.erb</p>
+<h1>Board List</h1>
+<%= link_to 'New Board', new_board_path %>
+
+<ul>
+    <% @boards.each do |board| %>
+        <li>
+         <%= link_to board.name, board_path(board.id) %>
+         <%= link_to 'Edit', edit_board_path(board.id) %>
+         <%= link_to 'Delete', board_path(board.id), method: :delete %>
+        </li>
+        <% end %>
+</ul>
+
+
