updated lists controller/model for priority, navbbar, materlialize

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,9 +4,4 @@
   <%= render 'tasks/task', { task: task } %>
 <% end %>
 <hr />
-<%= link_to 'Add Task', new_list_task_path(@list) %>
-
-
-
-
-
+<%= link_to 'Add Task', new_list_task_path(@list) %>mast
