--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,8 +3,8 @@
   <a href="#" class="brand-logo">Trollo</a>
   <ul id="nav-mobile" class="right hide-on-med-and-down">
     <li><%= link_to 'Home', root_path %></li>
-    <li><%= link_to 'View All Lists' board_lists_path %></li>
-    <li><%= link_to 'Create a List' new_board_list_path %></li>
+    <li><%#= link_to 'View All Lists', board_list_path %></li>
+    <li><%#= link_to 'Create a List', new_board_list_path %></li>
     </ul>
   </div>
 </nav>
