--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,7 +1,10 @@
 <h1><%= @board.name %></h1>
 
+<%= link_to 'New List ', new_board_list_path(@board) %>
+
 <ul>
   <% @board.lists.each do |list| %>
     <li><%= link_to list.name, [@board, list] %></li>
   <% end %>
 </ul>
+
