--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class"container">
   <h1><%= @board.name%></h1>
   <h2><%= @list.id ? 'Edit' : 'Create' %></h2>
   <hr />
