--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Lists#edit</h1>
-<p>Find me in app/views/lists/edit.html.erb</p>
+<div class"container">
+  <h1><%= @board.name%></h1>
+  <h2><%= @list.id ? 'Edit' : 'Create' %></h2>
+  <hr />
+
+  <h3>Add List</h3>
+  <%= form_for @list do |f| %>
+    <%= f.label :List %>
+    <%= f.text_field :name, required: true, autofocus: true %>
+    <br /> 
+    <%= f.submit %>
+  <% end %>      
+</div>
