--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Board</h1>
 <%= form_for @board do |f| %>
-  <%= f.label :name %>
+  <%= f.label :Input %>
   <%= f.text_field :name %>
   <br /> 
   <%= f.submit %>
