--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,11 @@
 <h1><%= @list.name %></h1>
 
 <% @list.tasks.each do |task| %>
-  <%= render 'tasks/task', { task: task } %>
-  <%= link_to 'Delete', board_list_path(@list.board_id, @list), method: :delete %>
+  <%# render 'tasks/form', { task: task } %>
+  <p><%= task.name %></p>
+  
+  
+  <%= link_to 'Edit', edit_list_task_path(@list, task) %>
 <% end %>
 <hr />
 <%= link_to 'Add Task', new_list_task_path(@list) %>
