--- a/app/views/lists/.erb
+++ b/app/views/lists/.erb
@@ -6,6 +6,7 @@
   
   
   <%= link_to 'Edit', edit_list_task_path(@list, task) %>
+  <%= link_tp 'Delete', (@list, task), method: :delete %>
 <% end %>
 <hr />
 <%= link_to 'Add Task', new_list_task_path(@list) %>
